--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<title> Welcome to the Wonderful World of Kanye West aka Ye and his beard
+		<title> Welcome to the Wonderful World of Kanye West aka Ye and his Beard
 	<html lang="en-US">
 		</title>
 		<style>
